syntax = "proto3";

option java_package = "java_msg";

message DirectionRequest {
    enum Command {
        stop = 0;
        forward = 1;
        backward = 2;
        left = 3;
        right = 4;
    }
    Command command = 1;
}

message DirectionResponse {
    int32 code = 1;
    int32 errorMsg = 2;
}
